@@ -36,6 +36,8 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2007-12-12 DP  1.8.1  Prevent non-superusers from attempting to use the
+                      debugger because the plugin API won't let them anyway.
 2007-12-11 DP  1.8.1  Check that functions exist before debugging or setting
                       global breakpoints on them. Remove them from the treeview
                       if not.
